# gprolog

./: .gitignore  CITATION.cff  COPYING  ChangeLog  INSTALL  NEWS  PROBLEMS  README  RELEASE_DATES  VERSION
doc/: .gitignore  Makefile  README  acknow.tex  body.tex  c-interface.tex  check_fp  compil-scheme.eps  compil-scheme.fig  copyright.tex  cover.tex  custom.hva  debug-box.eps  debug-box.fig  debugger.tex  direct-cc.tex  do_latex  fd-cstr.tex  format-defs.tex  gprolog.tex  hevea.sty  intro.tex  logo.eps  macros.tex  packages.tex  pl-bips.tex  references.tex  tbl-contents.tex  use.tex
doc/html_node/: .cvsignore  .gitignore  README  hh-gprolog.hhp  hh-mkind.tex  hh-mktoc.tex  hh_do_hhc_hhk
examples/ExamplesC/: .gitignore  Makefile  README  examp.pl  examp_c.c  new_main.pl  new_main_c.c
examples/ExamplesFD/: .gitignore  BENCH-DISPERSION  CHECK-FD  CHECK-FD-BENCH  CHECK-FD10  Makefile  alpha.pl  array.pl  bdiag.pl  bdonald.pl  bench_1000.out  bpigeon.pl  bqueens.pl  bramsey.pl  bridge.pl  bridge1.pl  bschur.pl  bsend.pl  callgrind.out.13041  callgrind.out.29467  callgrind.out.new5_queens_26_t19118  cars.pl  crypta.pl  digit8.pl  dispersion_results.out  donald.pl  eq10.pl  eq20.pl  five.pl  gardner.pl  interval.pl  langford.pl  magic.pl  magsq.pl  multipl.pl  optimized_results.txt  out  out.txt  out_optimized_10.txt  out_optimized_100.txt  (+8 more)
examples/ExamplesPl/: .gitignore  CHECK-PL  Makefile  PROGS  README  boyer.pl  browse.pl  cal.pl  chat_parser.pl  common.pl  crypt.pl  ham.pl  hook.pl  meta_qsort.pl  nand.pl  nrev.pl  poly_10.pl  qsort.pl  queens.pl  queensn.pl  query.pl  reducer.pl  (+5 more)
src/: .gitignore  .indent.pro  CONTEXTS  CSHSETVARS  DEVELOPMENT  DISTRIB_FILES  DOSSETVARS.BAT  MAC-OS  MACOS  Makefile  Makefile.in  PORTING  README  SETVARS  VERSION  WINDOWS  WINDOWS-OLD  WINDOWS64  WINDOWS64-OLD  callgrind.out.11192  callgrind.out.11258  callgrind.out.25579  callgrind.out.26081  config.guess  config.sub  configure  configure.in  generated_tests  generated_tests.pl  generated_tests_results.ok  out  out.txt  test  test.c  testcases  testcases.pl  testcases_results.ok
src/BipsFD/: .gitignore  Makefile.in  all_fd_bips.pl  bips_fd.h  fd_bool.pl  fd_bool_c.c  fd_bool_fd.fd  fd_infos.pl  fd_infos_c.c  fd_math.pl  fd_math_c.c  fd_math_fd.fd  fd_optim.pl  fd_prime.pl  fd_prime_c.c  fd_prime_fd.fd  fd_symbolic.pl  fd_symbolic_c.c  fd_symbolic_fd.fd  fd_values.pl  fd_values_c.c  fd_values_fd.fd  math_supp.c  math_supp.h  oper_supp.c  oper_supp.h  t.pl  t_c.c  t_fd.c  t_fd.fd
src/BipsPl/: .gitignore  BYTE_CODE  Makefile.in  all_pl_bips.pl  all_pl_bips.wam  all_solut.pl  all_solut.wam  all_solut_c.c  arith_inl.pl  arith_inl.wam  arith_inl_c.c  assert.pl  assert.wam  assert_c.c  atom.pl  atom.wam  atom_c.c  b_params.h  bc_supp.c  bc_supp.h  bips_pl.h  c_supp.c  c_supp.h  call.pl  call.wam  call_args.pl  call_args.wam  call_args_c.c  callinf_supp.c  callinf_supp.h  catch.pl  catch.wam  char_io.pl  char_io.wam  char_io_c.c  const_io.pl  const_io.wam  const_io_c.c  consult.pl  consult.wam  (+119 more)
src/EngineFD/: .gitignore  Makefile.in  engine_fd.h  fd_hook_range.h  fd_inst.c  fd_inst.h  fd_inst.h.gch  fd_range.c  fd_range.h  fd_range.h.gch  fd_to_c.h  fd_unify.fd  tests_fd_range  tests_fd_range.c
src/EnginePl/: .gitignore  LINUX_SIGSEGV.c  Makefile.in  PPC_SIGSEGV.c  SOLARIS_SIGSEGV.c  WIN32_SIGSEGV.c  WIN32_all_SIGSEGV.c  WIN_SIGSEGV.c  arch_dep.c  arch_dep.h  atom.c  atom.h  bool.h  context.h  cpp_headers.c  cpt_string.c  disass-trampoline-old.sh  dl_malloc.c  eng1-x86_64_win.s  engine.c  engine.h  engine1.c  engine_pl.h  euclide.c  gp_config.h.in  gprolog.h  gprolog.h.gch  hash.c  hash.h  hash_fct.c  hash_fct.h  hash_fct1.c  hash_tbl.c  hash_tbl.h  headers.h  if_no_fd.c  if_no_fd.h  machine.c  machine.h  machine1.c  (+52 more)
src/Fd2C/: .gitignore  FD_SYNTAX  Makefile.in  compile.pl  fd2c.pl  parse.pl  read_file.pl
src/Linedit/: .gitignore  Makefile.in  README  completion.c  completion.h  ctrl_c.c  ctrl_c.h  linedit.c  linedit.h  terminal.c  terminal.h  test_linedit.c  test_noecho.c
src/Ma2Asm/: .gitignore  INLINED  MA_SYNTAX  Makefile.in  alpha_any.c  arm32_any.c  arm64_any.c  check.c  chkma.c  chkma_ma.ma  extract_asm.c  ix86_any.c  ix86_win32.c  ma2asm.c  ma2asm_inst.c  ma_parser.c  ma_parser.h  ma_protos.h  mapper_force.h  mappers.sh  mappers_undef.h  mips32_any.c  mips_any.c  mips_irix.c  powerpc_any.c  ppc32_any.c  ppc_linux.c  riscv64_any.c  sparc32_any.c  sparc64_any.c  sparc_any.c  x86_64_any.c
src/Ma2Asm/FromC/: .gitignore  Makefile.in  asm.c  asm_inst.c  mach.h  sparc64-setx.c  wam_archi.h
src/Pl2Wam/: .gitignore  CXT_REMOVE.pl  Makefile.in  OTHER_PL  all.pl  bip_list.pl  boot_cp  check_boot  check_boot.sh  ciaolib.pl  code_gen.pl  code_gen.wam  compat.pl  context.pl  context.wam  first_arg.pl  first_arg.wam  fix-wam.sh  indexing.pl  indexing.wam  inst_codif.pl  inst_codif.wam  internal.pl  internal.wam  make_bip_list.pl  pl2wam.pl  pl2wam.wam  pl2wam_emul  pl2wam_interp  read_file.pl  read_file.wam  reg_alloc.pl  reg_alloc.wam  sics_pl2wam  sicslib.pl  swi_pl2wam  swilib.pl  syn_sugar.pl  syn_sugar.wam  wam_emit.pl  (+3 more)
src/Tools/: .gitignore  Makefile.in  bt_string.c  bt_string.h  cpp_headers.c  cpt_string.c  ctor.h  hash_fct.c  hash_fct.h  hash_fct1.c  hash_fct_aux.h  map_example.c  map_rbtree.h  map_test.c  rbtree.c  rbtree.h  rbtree_augmented.h
src/TopComp/: .gitignore  Makefile.in  copying.c  copying.h  decode_hexa.c  hexfilter.c  mangle_filter.c  mangling.c  mangling.h  prolog_path.c  top_comp.c  top_level.c  top_level_main.c
src/W32GUICons/: .gitignore  Makefile.in  README  w32_console.c  w32_console.rc  w32_resource.h  w32gc_interf.c  w32gc_interf.h  win_exe_icon.rc
src/Wam2Ma/: .gitignore  Makefile.in  bt_string.c  bt_string.h  wam2ma.c  wam_parser.c  wam_parser.h  wam_protos.h
src/Win32/: .gitignore  Makefile.in  README  addcrlf  compile_install  create-initial.iss  create_bat.c  gp-setup.iss  gp-setup.iss.in  gp-vars-iss.txt.in  initial.iss
src/WinInstaller/: .gitignore  Makefile.in  README  compile_install.sh  create_bat.c  gp-setup.iss  gp-vars-iss.txt.in
(+15 files in other folders)
